@@ -15,6 +15,7 @@
 %Document -png -jpeg -jbig2 by extension
 %Document -extract-stream - check enc
 %Document -obj - check enc
+%Document -merge-no-struct-trees in merge and collate
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
 % dotnetcpdflibmanual.pdf, jcpdflibmanual.pdf jscpdflibmanual.pdf etc.
